# agent-flow-next

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  架构设计.md
agent_flow/: __init__.py
agent_flow/cli/: main.py  plugin.py
agent_flow/core/: agent_memory_sync.py  agent_scheduler.py  analyzer.py  claude_settings.py  config.py  decay.py  doctor.py  hook_telemetry.py  memory_index.py  native_runtime.py  organizer.py  plugin.py  plugin_loader.py  plugin_manifest.py  plugin_registry.py  plugin_selection.py  recall.py  recovery.py  request_context.py  runtime.py  runtime_context.py  skill_manager.py  stage_runtime.py  startup_context.py  state_contract.py  team_sync.py  types.py
agent_flow/governance/: promotions.py
agent_flow/migrations/: legacy.py
agent_flow/resources/: __init__.py  resolver.py
agent_flow/tools/: __init__.py  cdn_upload.py
fewshots/: intern.md
plugins/: README.md
plugins/agent-orchestration/: manifest.yaml
plugins/builtin-demo/: manifest.yaml
plugins/hermes-skillops/: manifest.yaml
plugins/legacy-migration/: manifest.yaml
plugins/mcp-factory/: manifest.yaml
plugins/memory-recall/: manifest.yaml
plugins/ops-doctor/: manifest.yaml
plugins/organization-evolution/: manifest.yaml
plugins/runtime-adapters/: manifest.yaml
plugins/team-collaboration/: manifest.yaml
plugins/user-profile/: manifest.yaml
plugins/workflow-guards/: manifest.yaml
plugins/workflow-pipeline/: manifest.yaml
tests/: conftest.py  test_bootstrap.py  test_doctor.py  test_governance.py  test_migration.py  test_resource_resolver.py
(+225 files in other folders)
